--- a/chat/homepage.html
+++ b/chat/homepage.html
@@ -7,11 +7,13 @@
    	<style>
   body { background: url(2anita_foto2.jpg); color: 002080}
      </style>
+     <!--Remove style definition from .html file. Use custom .css for it-->
 </head>
 <body text = "red" >
 <br>
 <div align = "center">
 <h1 style="color:blue"><b><big>OUR CHATTING ROOM</b></big></h1>
+<!--Do not define style attribute in .html explicitly. Use .css for it-->
 <div class = "circle"><b><big>ON</big></b></div>
     </div>
 	</div>
@@ -24,6 +26,7 @@
     <div align = "center">
 	<br>
 	<h2 align="center" style="color:blue"><b><big>My menu</b></big></h2>
+	<!--explicit style again-->
 	<br>
 	<b>Edit your own text:</b>
 	<br>
@@ -41,6 +44,7 @@
   <br>
 	<br>
 	<textarea name = "message" style = "width:50%">Mlada Ihnatovich</textarea>
+	<!--explicit style again-->
 	<br>
 	<img src = "Oreiro.jpg" alt = "I" width = "150" height = "150">
 	<br>
@@ -61,6 +65,7 @@
     <br>
     <br>
 	<select name="Messages" multiple="multiple" size = 15 style ="width:60%">
+	<!--explicit style again-->
     <option></option>
     <option></option>
     <option></option>
@@ -70,7 +75,9 @@
 
 	<br>
 	<textarea name = "message" style = "width:50%">Write text</textarea>
+	<!--explicit style again-->
 	<input type = "submit" value = "Send" style = "width:10%" class = "btn btn-primary">
+	<!--explicit style again-->
 	<br>
 	<br>
 
@@ -86,6 +93,7 @@
   <br>
   <marquee behavior="alternate" style = "color:blue" direction="right"><h4><big><i><b>Chatting and chatting, and chatting...</b></i></big></h4></marquee>
   </div>
+  <!--Text is ugly formatted-->
   </div>
 
 </body>
