--- a/chat/homepage.html
+++ b/chat/homepage.html
@@ -68,7 +68,7 @@
          </select>
 
 	     <br>
-	     <textarea name = "message" class = "writing" id = "textarea">Write text</textarea>
+	     <textarea name="message" class="writing" id="textarea" placeholder="Write text "></textarea>
 	     <input type = "submit" value = "Send" class = "btn btn-warning sending" id = "send">
 	     <br>
 	     <br>
