--- a/chat/homepage.html
+++ b/chat/homepage.html
@@ -16,7 +16,7 @@
      <br>
      <div align = "center">
          <h1 class="chat"><b><big>OUR CHATTING ROOM</b></big></h1>
-		 <input type = "submit" value = "ON" class = "btn btn-success" id = "onOff">
+		 <input type = "submit" value = "ON" class = "btn btn-success" id = "OnOff">
      </div>
      </div>
 
@@ -46,7 +46,7 @@
          <div align = "center">
          <br>
 	     <br>
-	     <textarea name = "message" class = "n_s" id = "name_surname"></textarea>
+	     <textarea name = "message" readonly="readonly" class = "n_s" id = "name_surname"></textarea>
 	     <br>
 	     <img src = "my.jpg" alt = "I" width = "150" height = "150">
 	     <br>
